# cpp-unittest-atlas-januar-2022

./: README.md
Euro2DollarCalculator/Euro2DollarCalculator/: Euro2DollarCalculator.sln
Euro2DollarCalculator/Euro2DollarCalculator/Euro2DollarCalculator/: Euro2DollarCalculator.cpp  Euro2DollarCalculator.h  Euro2DollarCalculator.qrc  Euro2DollarCalculator.ui  Euro2DollarCalculator.vcxproj  Euro2DollarCalculator.vcxproj.filters  euro_to_dollar_presenter_impl.h  main.cpp
Euro2DollarCalculator/Euro2DollarCalculator/Euro2DollarCalculatorGuiTest/: Euro2DollarCalculatorGuiTest.vcxproj  EuroToDollarCalculatorApplicationTest.h
QtEuro2DollarCalculator/QtEuro2DollarCalculator/: QtEuro2DollarCalculator.sln
QtEuro2DollarCalculator/QtEuro2DollarCalculator/QtEuro2DollarCalculator/: QtEuro2DollarCalculator.cpp  QtEuro2DollarCalculator.h  main.cpp  (+9 more)
Tag1_01Stapel/tag1_01stapel/: tag1_01stapel.sln
Tag3_01FakeDemoProjekt/Tag3_01FakeDemoProjekt/: Tag3_01FakeDemoProjekt.sln
projekt-01-stapel/: CMakeLists.txt  main.cpp  stapel.cpp  stapel.h
projekt-01-stapel-alternative/: CMakeLists.txt  main.cpp
projekt-01-stapel-alternative/code/includes/: Monster.h  Ogre.h  Troll.h  Vampir.h  Zombie.h
projekt-01-stapel-alternative/code/src/: CMakeLists.txt  Monster.cpp  Ogre.cpp  Troll.cpp  Vampir.cpp  Zombie.cpp  stapel.cpp
projekt-01-stapel-alternative/tests/: CMakeLists.txt  hello_test.cpp  hello_test.h  stapel_test.cpp  stapel_test.h
projekt-01-stapel/tests/: CMakeLists.txt  stapel_test.h
tag1_02tiere/tag1_02tiere/: tag1_02tiere.sln
tag1_03calculator/Tag1_03Calculator/: Tag1_03Calculator.sln
tag1_04personenService/tag1_04personenService/: tag1_04personenService.sln
tag2_01Logger/tag2_01Logger/: tag2_01Logger.sln
(+53 files in other folders)
